edits in menu section

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                         </li>
                     </ul>
                     <form class="d-flex mr-1">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Войти</button>
                     </form>
                 </div>
             </nav>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/slider-img1.png"
+                    <img src="https://dasushi.od.ua/storage/article-preview/app-article/41/origin/sushi-polza-i-vred1653924777.jpg?t=1653924778"
                          class="d-block w-100"
                          alt="slider-img1">
                     <div class="carousel-caption d-none d-md-block">
@@ -109,7 +109,7 @@
 
 
 <section id="about">
-    <h2 class="about-title">Top sets</h2>
+    <h2 class="text-center mb-5">Top sets</h2>
     <div class="container">
         <div class="row">
 
@@ -194,182 +194,134 @@
 </section>
 
 <section id="menu">
-    <h2 class="menu-title">Blogs</h2>
+    <h2 class="text-center mb-5">Blogs</h2>
     <div class="container">
-        <div class="row">
-            <div class="col-md-3 py-3 py-md-0 mb-3">
-                <div class="card h-100">
-                    <img src="https://evrasia-ex.ru/media/images/node_140.jpg" alt="...">
+        <div class="row g-3">
+            <div class="col-md-3">
+                <div class="card h-100 shadow text-center">
+                    <div class="effect">
+                        <img src="https://s3v2.elitibi.ru/static/2003SL/41e7680b9a53a18af32d6e42cf074a74.jpg?2d0e6c5c986ea4b70326cd22bf4c0f63"
+                             alt="...">
+                    </div>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
+                        <h5 class="card-title">Сет горячий микс</h5>
+                        <p class="card-text">Состав: Лосось фри темпура, Филадельфия темпура с тунцом, Нежный с курицей,
+                            Мистер крабс, Оливье темпура, 40 шт.</p>
                     </div>
                     <div class="card-footer">
-                        <a class="btn btn-primary" href="#">Заказать</a>
+                        <a class="btn btn-danger" href="#">Хочу</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 py-3 py-md-0 mb-3">
-                <div class="card h-100">
-                    <img src="https://s3v2.elitibi.ru/static/2003SL/41e7680b9a53a18af32d6e42cf074a74.jpg?2d0e6c5c986ea4b70326cd22bf4c0f63"
-                         alt="...">
+            <div class="col-md-3">
+                <div class="card h-100 shadow text-center">
+                    <div class="effect">
+                        <img src="https://ucrabs.by/image/cache/catalog/catalog/seti/kupidon-2-600x600.jpg"
+                             alt="...">
+                    </div>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
+                        <h5 class="card-title">Сет горячий микс</h5>
+                        <p class="card-text">Состав: Лосось фри темпура, Филадельфия темпура с тунцом, Нежный с курицей,
+                            Мистер крабс, Оливье темпура, 40 шт.</p>
                     </div>
                     <div class="card-footer">
-                        <a class="btn btn-primary" href="#">Заказать</a>
+                        <a class="btn btn-danger" href="#">Хочу</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 py-3 py-md-0 mb-3">
-                <div class="card h-100">
-                    <img src="https://evrasia-ex.ru/media/images/node_140.jpg" alt="...">
+            <div class="col-md-3">
+                <div class="card h-100 shadow text-center">
+                    <div class="effect">
+                        <img src="https://s3v2.elitibi.ru/static/2003SL/41e7680b9a53a18af32d6e42cf074a74.jpg?2d0e6c5c986ea4b70326cd22bf4c0f63"
+                             alt="...">
+                    </div>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
+                        <h5 class="card-title">Сет горячий микс</h5>
+                        <p class="card-text">Состав: Лосось фри темпура, Филадельфия темпура с тунцом, Нежный с курицей,
+                            Мистер крабс, Оливье темпура, 40 шт.</p>
                     </div>
                     <div class="card-footer">
-                        <a class="btn btn-primary" href="#">Заказать</a>
+                        <a class="btn btn-danger" href="#">Хочу</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 py-3 py-md-0 mb-3">
-                <div class="card h-100">
-                    <img src="https://evrasia-ex.ru/media/images/node_140.jpg" alt="...">
+            <div class="col-md-3">
+                <div class="card h-100 shadow text-center">
+                    <div class="effect">
+                        <img src="https://s3v2.elitibi.ru/static/2003SL/41e7680b9a53a18af32d6e42cf074a74.jpg?2d0e6c5c986ea4b70326cd22bf4c0f63"
+                             alt="...">
+                    </div>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
+                        <h5 class="card-title">Сет горячий микс</h5>
+                        <p class="card-text">Состав: Лосось фри темпура, Филадельфия темпура с тунцом, Нежный с курицей,
+                            Мистер крабс, Оливье темпура, 40 шт.</p>
                     </div>
                     <div class="card-footer">
-                        <a class="btn btn-primary" href="#">Заказать</a>
+                        <a class="btn btn-danger" href="#">Хочу</a>
                     </div>
                 </div>
             </div>
-
-
-            <div class="col-md-3 py-3 py-md-0 mb-3">
-                <div class="card h-100">
-                    <img src="https://evrasia-ex.ru/media/images/node_140.jpg" alt="...">
+            <div class="col-md-3">
+                <div class="card h-100 shadow text-center">
+                    <div class="effect">
+                        <img src="https://s3v2.elitibi.ru/static/2003SL/41e7680b9a53a18af32d6e42cf074a74.jpg?2d0e6c5c986ea4b70326cd22bf4c0f63"
+                             alt="...">
+                    </div>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
+                        <h5 class="card-title">Сет горячий микс</h5>
+                        <p class="card-text">Состав: Лосось фри темпура, Филадельфия темпура с тунцом, Нежный с курицей,
+                            Мистер крабс, Оливье темпура, 40 шт.</p>
                     </div>
                     <div class="card-footer">
-                        <a class="btn btn-primary" href="#">Заказать</a>
+                        <a class="btn btn-danger" href="#">Хочу</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 py-3 py-md-0 mb-3">
-                <div class="card h-100">
-                    <img src="https://evrasia-ex.ru/media/images/node_140.jpg" alt="...">
+            <div class="col-md-3">
+                <div class="card h-100 shadow text-center">
+                    <div class="effect">
+                        <img src="https://s3v2.elitibi.ru/static/2003SL/41e7680b9a53a18af32d6e42cf074a74.jpg?2d0e6c5c986ea4b70326cd22bf4c0f63"
+                             alt="...">
+                    </div>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
+                        <h5 class="card-title">Сет горячий микс</h5>
+                        <p class="card-text">Состав: Лосось фри темпура, Филадельфия темпура с тунцом, Нежный с курицей,
+                            Мистер крабс, Оливье темпура, 40 шт.</p>
                     </div>
                     <div class="card-footer">
-                        <a class="btn btn-primary" href="#">Заказать</a>
+                        <a class="btn btn-danger" href="#">Хочу</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 py-3 py-md-0 mb-3">
-                <div class="card h-100">
-                    <img src="https://evrasia-ex.ru/media/images/node_140.jpg" alt="...">
+            <div class="col-md-3">
+                <div class="card h-100 shadow text-center">
+                    <div class="effect">
+                        <img src="https://s3v2.elitibi.ru/static/2003SL/41e7680b9a53a18af32d6e42cf074a74.jpg?2d0e6c5c986ea4b70326cd22bf4c0f63"
+                             alt="...">
+                    </div>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
+                        <h5 class="card-title">Сет горячий микс</h5>
+                        <p class="card-text">Состав: Лосось фри темпура, Филадельфия темпура с тунцом, Нежный с курицей,
+                            Мистер крабс, Оливье темпура, 40 шт.</p>
                     </div>
                     <div class="card-footer">
-                        <a class="btn btn-primary" href="#">Заказать</a>
+                        <a class="btn btn-danger" href="#">Хочу</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 py-3 py-md-0 mb-3">
-                <div class="card h-100">
-                    <img src="https://evrasia-ex.ru/media/images/node_140.jpg" alt="...">
+            <div class="col-md-3">
+                <div class="card h-100 shadow text-center">
+                    <div class="effect">
+                        <img src="https://s3v2.elitibi.ru/static/2003SL/41e7680b9a53a18af32d6e42cf074a74.jpg?2d0e6c5c986ea4b70326cd22bf4c0f63"
+                             alt="...">
+                    </div>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of
-                            the card's content.</p>
+                        <h5 class="card-title">Сет горячий микс</h5>
+                        <p class="card-text">Состав: Лосось фри темпура, Филадельфия темпура с тунцом, Нежный с курицей,
+                            Мистер крабс, Оливье темпура, 40 шт.</p>
                     </div>
                     <div class="card-footer">
-                        <a class="btn btn-primary" href="#">Заказать</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-3 py-3 py-md-0 mb-3">
-                <div class="card h-100">
-                    <img src="https://evrasia-ex.ru/media/images/node_140.jpg" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the
-                            bulk
-                            of
-                            the card's content.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a class="btn btn-primary" href="#">Заказать</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 py-3 py-md-0 mb-3">
-                <div class="card h-100">
-                    <img src="https://evrasia-ex.ru/media/images/node_140.jpg" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the
-                            bulk
-                            of
-                            the card's content.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a class="btn btn-primary" href="#">Заказать</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 py-3 py-md-0 mb-3">
-                <div class="card h-100">
-                    <img src="https://evrasia-ex.ru/media/images/node_140.jpg" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the
-                            bulk
-                            of
-                            the card's content.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a class="btn btn-primary" href="#">Заказать</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 py-3 py-md-0 mb-3">
-                <div class="card h-100">
-                    <img src="https://evrasia-ex.ru/media/images/node_140.jpg" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the
-                            bulk
-                            of
-                            the card's content.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a class="btn btn-primary" href="#">Заказать</a>
+                        <a class="btn btn-danger" href="#">Хочу</a>
                     </div>
                 </div>
             </div>
@@ -388,7 +340,7 @@
                 </p>
             </div>
 
-            <div class="col-6 col-md-3">
+            <div class="col-12 col-md-3">
                 <h3 class="mb-3">Категория</h3>
                 <ul class="footer-links">
                     <li><a href="#home">Главная</a></li>
@@ -397,21 +349,19 @@
                 </ul>
             </div>
 
-            <div class="col-6 col-md-4">
+            <div class="col-12 col-md-4">
                 <h3 class="mb-3">Адрес</h3>
                 <a class="footer-phone" href="tel:2391980000000">тел. 2-391-9-800-000-00</a>
                 <a class="footer-mail" href="mailto:sushrolYaroslava@gmail.com">e-mail: sushrolYaroslava@gmail.com</a>
             </div>
         </div>
-        <div class="row pt-5">
-            <div class="container">
-                    <h2>
-                        Политика конфиденциальности &copy; 2023
-                    </h2>
-                </div>
-            </div>
+        <div class="row pt-5 text-center">
+            <h2>
+                Политика конфиденциальности &copy; 2023
+            </h2>
         </div>
     </div>
+
 </footer>
 
 
