edits in menu section test

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                              alt="...">
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Сет горячий микс</h5>
+                        <h5 class="card-title">Сет с любовью</h5>
                         <p class="card-text">Состав: Лосось фри темпура, Филадельфия темпура с тунцом, Нежный с курицей,
                             Мистер крабс, Оливье темпура, 40 шт.</p>
                     </div>
