--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <div class="col-md-3">
                     <div class="card h-100 shadow text-center">
                         <div class="effect">
-                            <img src="/images/main-img-5.jpg" alt="main-img-5">
+                            <img src="images/main-img-5.jpg" alt="main-img-5">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Сет Филадельфия</h5>
@@ -211,7 +211,7 @@
                 <div class="col-md-3">
                     <div class="card h-100 shadow text-center">
                         <div class="effect">
-                            <img src="/images/main-img-6.jpg" alt="main-img-6">
+                            <img src="images/main-img-6.jpg" alt="main-img-6">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Сет Хит</h5>
@@ -227,7 +227,7 @@
                 <div class="col-md-3">
                     <div class="card h-100 shadow text-center">
                         <div class="effect">
-                            <img src="/images/main-img-7.jpg" alt="main-img-7">
+                            <img src="images/main-img-7.jpg" alt="main-img-7">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Сет Прикольный</h5>
@@ -243,7 +243,7 @@
                 <div class="col-md-3">
                     <div class="card h-100 shadow text-center">
                         <div class="effect">
-                            <img src="/images/main-img-8.jpg" alt="main-img-8">
+                            <img src="images/main-img-8.jpg" alt="main-img-8">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Сет Снеговик</h5>
